* Startup.cs: Configure startup class by adding the code inside the   ConfigureServices method. This will read the connection string we   put inside appsettings.json and initialize our web Application to   use the SQL Server Database. To enable Authentication for our Web Application, initialize the code   app.UseAuthentication(); inside the Configure method right above the   app.UseAuthorization();
* appsettings.json: Add connectionstring tag

* AppWithDocker.csproj:

--- a/AppWithDocker/AppWithDocker.csproj
+++ b/AppWithDocker/AppWithDocker.csproj
@@ -22,6 +22,7 @@
     <None Remove="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
     <None Remove="Microsoft.EntityFrameworkCore.SqlServer" />
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
+    <None Remove="DbContext\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.0.0" />
@@ -37,5 +38,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Test\" />
+    <Folder Include="DbContext\" />
   </ItemGroup>
 </Project>
