--- a/AppWithDocker/appsettings.json
+++ b/AppWithDocker/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "connectionstrings": "Data Source=localhost;Initial Catalog=DockerAppDb;User ID=sa;Password=Ankit@123"
+  },
   "AllowedHosts": "*"
 }
