* appsettings.json: ' update account controller
* Login.cshtml:
* _Layout.cshtml:
* AccountController.cs:

--- a/AppWithDocker/appsettings.json
+++ b/AppWithDocker/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "connectionstrings": "Data Source=localhost;Initial Catalog=DockerAppDb;User ID=sa;Password=Ankit@123"
+    "connectionstring": "Data Source=localhost;Initial Catalog=DockerAppDb;User ID=sa;Password=Ankit@123"
   },
   "AllowedHosts": "*"
 }
